<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>wtf.java9</groupId>
	<artifactId>maven-jaxb2-plugin</artifactId>
	<version>1.0-SNAPSHOT</version>

	<parent>
		<groupId>wtf.java9</groupId>
		<artifactId>seriously-wtf</artifactId>
		<version>1.0-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<properties>
		<entity.resolver>asPlugin</entity.resolver>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-model</artifactId>
			<version>2.0.9</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- use the maven-jaxb2-plugin to generate classes -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>clean-generated</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
						<configuration>
							<filesets>
								<fileset>
									<directory>${basedir}/generated-jaxb-api</directory>
								</fileset>
								<fileset>
									<directory>${basedir}/generated-jaxb-plugin</directory>
								</fileset>
							</filesets>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jvnet.jaxb2.maven2</groupId>
				<artifactId>maven-jaxb2-plugin</artifactId>
				<version>0.13.2</version>
				<executions>
					<execution>
						<id>generate-classes</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<schemaDirectory>schema</schemaDirectory>
							<generateDirectory>${basedir}/generated-jaxb-plugin</generateDirectory>
							<!-- disabling the generation of the episode file (whatever it does!)
								 prevents the "Prefix '' is already bound to ''" error on Java 9 -->
							<episode>false</episode>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- generate sources with JAXB API by executing `GenerateWithJaxbApi`;
			 		by doing this via Maven (as opposed to in the tests), it becomes debuggable
			 		via mvnDebug -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<phase>process-classes</phase>
						<goals>
							<goal>java</goal>
						</goals>
						<configuration>
							<!--<executable>${java}</executable>-->
							<mainClass>wtf.java9.maven_jaxb2_plugin.GenerateWithJaxbApi</mainClass>
							<arguments>${entity.resolver}</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<!-- JAVA 8 -->
		<profile>
			<id>java-8</id>
			<activation>
				<jdk>1.8</jdk>
			</activation>
			<properties>
				<java>java</java>
				<javac>javac</javac>
			</properties>
			<dependencies>
				<dependency>
					<groupId>org.glassfish.jaxb</groupId>
					<artifactId>jaxb-xjc</artifactId>
					<version>2.2.11</version>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.6.1</version>
						<configuration>
							<fork>true</fork>
							<executable>${javac}</executable>
							<compilerArgs>
								<arg>-XDignore.symbol.file</arg>
							</compilerArgs>
							<fork>true</fork>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!-- JAVA 9 -->
		<profile>
			<id>java-9</id>
			<activation>
				<jdk>9</jdk>
			</activation>
			<properties>
				<java>java9</java>
				<javac>javac9</javac>
			</properties>
			<dependencies>
				<dependency>
					<groupId>org.glassfish.jaxb</groupId>
					<artifactId>jaxb-xjc-jdk9</artifactId>
					<version>2.3.0-b170127.1453</version>
					<!-- org.glassfish.jaxb:jaxb-xjc-jdk9 depends on javax.xml.bind:jaxb-api
							version 2.3.0-b161121.1438, which does not exist in Maven Central;
							replace with version 2.3.0-b170201.1204 -->
					<exclusions>
						<exclusion>
							<groupId>javax.xml.bind</groupId>
							<artifactId>jaxb-api</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>javax.xml.bind</groupId>
					<artifactId>jaxb-api</artifactId>
					<version>2.3.0-b170201.1204</version>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.6.1</version>
						<configuration>
							<source>9</source>
							<target>9</target>
							<fork>true</fork>
							<executable>${javac}</executable>
							<compilerArgs>
								<arg>--add-modules</arg><arg>java.xml.bind</arg>
								<arg>--add-exports</arg><arg>java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED</arg>
								<arg>--add-exports</arg><arg>java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED</arg>
							</compilerArgs>
							<fork>true</fork>
						</configuration>
					</plugin>
<!--
					<plugin>
						<groupId>org.jvnet.jaxb2.maven2</groupId>
						<artifactId>maven-jaxb2-plugin</artifactId>
						<version>0.13.3-SNAPSHOT</version>
					</plugin>
-->
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
